--- a/src/components/resources/style.css
+++ b/src/components/resources/style.css
@@ -34,6 +34,8 @@ header.background .mycolor{
 header.background .mycolor:hover{
     background-color: #212529;
     color:#61dafb;
+    border-radius: 12px;
+    opacity: 85%;
     box-shadow: rgba(97, 218, 251, 1) 0px 20px 20px -6px;
     transition: all 0.3s ease-in-out;
         -webkit-transition: all 0.3s ease-in-out;
