--- a/src/components/resources/style.css
+++ b/src/components/resources/style.css
@@ -370,15 +370,6 @@ header.background .mycolor:hover{
 
  /* Whatsapp chat button */
 
-/* .whatsapp{
-    display: flex;
-    position: relative;
-    width: 70px;
-    height: 70px;
-    border-radius: 100%;
-    bottom: ;
-} */
-
 .whatsapp_float {
     position: fixed;
     display: flex;
@@ -390,7 +381,17 @@ header.background .mycolor:hover{
     text-align: center;
     font-size: 30px;
     z-index: 1000;
-  }
+}
+
+.whatsapp_float:hover {
+    box-shadow: rgba(97, 218, 251, 0.75) 0px 50px 100px -10px, rgba(97, 218, 251, 0.75) 0px 30px 60px -20px, rgba(97, 218, 251, 0.75) 0px -2px 6px 0px inset;
+    transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+}
+
 
 @media(max-width:991.98px) {
     header.background {
