--- a/src/components/resources/style.css
+++ b/src/components/resources/style.css
@@ -257,6 +257,18 @@ header.background .mycolor:hover{
     margin-bottom: 1rem;
 }
 
+.services h2.sheading{
+    font-size: 2.5rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+.services h3.s-subheading {
+    font-size: 1rem;
+    font-weight: 600;
+    font-style: italic;
+}
+
 .mySection h3.s-subheading {
     font-size: 1rem;
     font-weight: 600;
@@ -791,6 +803,11 @@ header.background .mycolor:hover{
         margin-bottom: 0.75rem;
     }
 
+    .services h2.s-heading {
+        font-size: 1.75rem;
+        margin-bottom: 0.75rem;
+    }
+
     #mainNavbar .navbar-nav .nav-item .nav-link{
         color:#212529;
 
@@ -798,7 +815,7 @@ header.background .mycolor:hover{
 
     .myaboutSection {
         padding-top: 11rem;
-        padding-bottom: 13rem;
+        padding-bottom: 1rem;
     }
 
     .myaboutSection .about-heading {
@@ -862,8 +879,8 @@ header.background .mycolor:hover{
         padding-bottom: 15rem;
     }
     .myaboutSection{
-        padding-top: 15rem;
-        padding-bottom: 15rem;
+        padding-top: 8rem;
+        padding-bottom: 0.5rem;
     }
 
     #mainNavbar {
