--- a/src/components/resources/style.css
+++ b/src/components/resources/style.css
@@ -92,7 +92,7 @@ header.background .mycolor:hover{
 }
 
 .my-carousel-two{
-    background-image: url("../images/store-3.jpg");
+    background-image: url("../images/store-5.jpeg");
     /* background-color: #282c34; */
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -612,7 +612,9 @@ header.background .mycolor:hover{
 }
 
 .overlay .modalContainer{    
-    margin: 7rem;
+    margin-top: 7rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     max-width: 100vw;
     border-radius: 15px;
     box-shadow: rgba(97, 218, 251, 0.75) 0px 50px 100px -10px, rgba(97, 218, 251, 0.75) 0px 30px 60px -20px, rgba(97, 218, 251, 0.75) 0px -2px 6px 0px inset;
@@ -632,15 +634,15 @@ header.background .mycolor:hover{
     color:#fff;
 }
 .overlay .modal-content .modal-body .my-heading{
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: 2rem;
+    line-height: 1.9rem;
     color:#fff;
 }
 
 .overlay .modal-content .modal-body .my-sub{
     color:#fff;
-    font-size: 1.25rem;
-    line-height: 1.85rem;
+    font-size: 1.15rem;
+    line-height: 1.55rem;
     font-style: italic;
     margin-bottom: 1rem;
 }
