--- a/src/components/resources/style.css
+++ b/src/components/resources/style.css
@@ -739,6 +739,68 @@ header.background .mycolor:hover{
         -o-transition: all 0.3s ease-in-out;
 }
 
+
+#section-3 .p-item{
+    /* max-width: 26rem;
+    margin-left: auto;
+    margin-right: auto; */
+    border-radius: 25px;
+    box-shadow: rgba(97, 218, 251, 1) -3px 15px 15px -3px;
+}
+/* #section-5 .p-item .p-itemhover {
+    box-shadow: rgba(97, 218, 251, 1) 0px 20px 20px -6px;
+} */
+
+/* #section-5 .p-item .p-link {
+    position: relative;
+    display: block;
+    margin: 0 auto;
+}
+#section-5 .p-item .p-link .p-hover {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(97, 218, 251, 0.75);
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity ease-in-out 0.3s;
+    -webkit-transition: opacity ease-in-out 0.3s;
+    -moz-transition: opacity ease-in-out 0.3s;
+    -ms-transition: opacity ease-in-out 0.3s;
+    -o-transition: opacity ease-in-out 0.3s;
+} */
+
+#section-3 .p-item .p-link .p-hover .p-content {
+    font-size: 15rem;
+}
+
+#section-3 .p-item .p-link:hover .p-hover{
+    opacity: 1;
+}
+
+#section-3 .p-item .p-link {
+    position: relative;
+    display: block;
+    margin: 0 auto;
+}
+#section-3 .p-item .p-link .p-hover {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(97, 218, 251, 0.75);
+    border-radius: 25px;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity ease-in-out 0.3s;
+    -webkit-transition: opacity ease-in-out 0.3s;
+    -moz-transition: opacity ease-in-out 0.3s;
+    -ms-transition: opacity ease-in-out 0.3s;
+    -o-transition: opacity ease-in-out 0.3s;
+}
 @media(max-width:991.98px) {
     header.background {
         padding-top: 11rem;
