--- a/src/components/resources/style.css
+++ b/src/components/resources/style.css
@@ -53,7 +53,7 @@ header.background .mycolor:hover{
 } */
 
 .my-carousel-one{
-    background-image: url("../images/header.jpeg");
+    background-image: url("../images/Header.jpg");
     /* background-color: #282c34; */
     background-repeat: no-repeat;
     background-attachment: scroll;
